Prepare for 31.0.1.Final release with PEP added

--- a/pom.xml
+++ b/pom.xml
@@ -848,6 +848,12 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.keycloak</groupId>
+                <artifactId>keycloak-policy-enforcer</artifactId>
+                <version>${keycloak.version}</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
